adding new styles

--- a/styles.css
+++ b/styles.css
@@ -290,6 +290,49 @@ margin-top:80px;
  overflow: hidden;
  box-shadow: 0px 8px 33px -4px rgba(66, 68, 90, 0.29);
 }
+.faq {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+}
+.faq-title{
+    color: var(--color-main-dark-accent);
+    text-align: center;
+    font-family:'Geologica Bold';
+    font-size:32px;
+}
+.faq-name{
+    color: var(--color-main-dark-accent);
+    text-align: center;
+    font-family:'Geologica Bold';
+    font-size:16px;
+    height:5rem;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.faq-text{
+    display: flex;
+    justify-content: center;
+    font-family: 'Geologica Regular';
+}
+.faq-content{
+    
+    padding-top:3rem;
+    display:flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 85%;
+}
+.faq-item{
+    background-color: var(--color-light-gray);
+padding: 1rem;
+ border-radius: 0.75rem;
+ overflow: hidden;
+}
+
 
 
 .services{
@@ -315,7 +358,7 @@ display: flex;
 justify-content: center;
 color: var(--color-main-dark-accent)
 }
-.pricing{
+.form{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -390,50 +433,51 @@ color: var(--color-main-dark-accent)
     font-size:20px;
     text-decoration: none;
 }
-.pricing-content{
-    width: 70%;
+.form-content{
+    width: fit-content;
     display:flex;
     flex-direction: column;
     align-items: center;
+    justify-content: start;
     gap: 2rem;
     padding: 2rem;
 }
 
-.pricing-title{
+.form-title{
     color: var(--color-white);
     font-family: 'Geologica Bold';
     font-size:32px;
 }
 
-.pricing-subtitle{
+.form-subtitle{
     color: var(--color-white);
     font-family: 'Geologica Bold';
     font-size:32px;
 }
-.pricing-item{
+.form-item{
     width: 100%;
-    display: inline-flex;
     box-sizing: border-box;
-    background: var(--color-white);
+    justify-content: start;
     border-radius: 12px;
     text-align: center;
-    border: 2px solid var(--color-white);
     align-items: center;
-    padding:2rem;
-    justify-content: space-between;
-
+    gap:1rem;
 }
-.pricing-name{
-    color: var(--color-main-dark-accent);
-    font-family: 'Geologica Bold';
+.form-name{
+    color: var(--color-white);
+    font-family: 'Geologica Regular';
     font-size:24px;
+    padding-bottom: 0.5rem;
 }
-.pricing-cost{
+.form-cost{
     color: var(--color-main-likemagenta);
     font-family: 'Geologica Regular';
     font-size:24px;
+    border-radius: 0.75rem;
+    height: 3.25rem;
+    width: 100%;
 }
-.pricing-text{
+.form-text{
     display: flex;
     flex-direction:column;
     align-items: flex-start;
@@ -502,7 +546,7 @@ color: var(--color-main-dark-accent)
     font-size:16px;
     text-align: center;
 }
-.pricing-picture{
+.form-picture{
     display: none;
 }
 .steps-item{
@@ -544,7 +588,7 @@ color: var(--color-main-dark-accent)
 .advantages-bg{
     background: var(--color-white);
 }
-.pricing-bg{
+.form-bg{
     background: var(--color-main-likemagenta);
 }
 .footer-bg{
@@ -556,7 +600,7 @@ color: var(--color-main-dark-accent)
     flex-direction:column; 
     padding: 1.5rem;
 }
-.pricing-picture{
+.form-picture{
     display: flex;
 }
 .intro .interactive-block{
@@ -644,7 +688,7 @@ color: var(--color-main-dark-accent)
         width: auto;
         height: auto;
     }
-    .pricing-item{
+    .form-item{
         width: 100%;
         display: inline-flex;
         flex-direction: column;
@@ -693,17 +737,17 @@ color: var(--color-main-dark-accent)
         padding-top:2rem;
         border-top: 1px solid white;
     }
-    .pricing-content{
+    .form-content{
         width: 100%;
     }
-    .pricing-cost{
+    .form-cost{
         text-align:center;
         width: 100%;
     }
-    .pricing-item{
+    .form-item{
         gap:2rem;
     }
-    .pricing-text{
+    .form-text{
         gap:1.5rem;
         align-items: center;
     }
@@ -785,7 +829,7 @@ color: var(--color-main-dark-accent)
             width: auto;
             height: auto;
         }
-        .pricing-item{
+        .form-item{
             width: 100%;
             display: inline-flex;
             box-sizing: border-box;
