--- a/styles.css
+++ b/styles.css
@@ -85,9 +85,10 @@ html,body {
     color: var(--color-dark-gray)
 }
 .header-content{
-    gap:1rem;
-    display: inline-flex;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
+    width: 100%;
 }
 .intro{
     width: 100%;
@@ -617,13 +618,13 @@ color: var(--color-main-dark-accent)
     padding-bottom: 8rem;
 }
 .steps-content{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    font-family: 'Geologica Regular';
+    display: grid; 
+    grid-template-columns: 1fr 1fr; 
     gap:2rem;
     padding-top:2.5rem;
     padding-bottom:2.5rem;
+    font-size: 24px;
 }
 .steps-title{
     color: var(--color-main-dark-accent);
@@ -665,8 +666,7 @@ color: var(--color-main-dark-accent)
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    gap:0.5rem;
+    align-items: flex-start;
 }
 
 
