--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ html,body {
     justify-content: space-between;
     padding-left:10rem;
     padding-right:10rem;
+    min-height: 5.25rem;
 }
 .header-name{
     display: flex;
@@ -321,12 +322,14 @@ font-family: "Geologica Regular",sans-serif;
 font-size:20px;
 margin-top:20px;
 }
-.intro .interactive-block .button-block{
+.button-block{
 width: 100%;
 display: flex;
 justify-content: start;
-gap:20px;
+gap:5rem;
 margin-top:80px;
+flex-direction: row;
+justify-content: center;
 }
 .intro .picture-block{
     width: 100%;
@@ -472,12 +475,14 @@ color: var(--color-main-dark-accent)
     border: none;
     cursor: pointer;
     border-radius: 0.25rem;
-    text-align: center;
-    font-family: 'Geologica SemiBold';
-    font-size:20px;
+    text-align: start;
+    font-family: 'Geologica Regular';
+    font-size:16px;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     text-decoration: none;
+    min-height: 3.5rem;
+    gap:0.5rem;
 }
 .red-btn-header.btn-text-content{
     display: flex;
@@ -486,9 +491,10 @@ color: var(--color-main-dark-accent)
 
 
 .white-btn{
+    display: flex;
     background-color: var(--color-white);
     color: var(--color-main-dark-accent);
-    width: 13rem;
+    max-width: 17.5rem;
     border: none;
     padding: 1rem;
     cursor: pointer;
@@ -497,6 +503,15 @@ color: var(--color-main-dark-accent)
     font-family: 'Geologica SemiBold';
     font-size:20px;
     text-decoration: none;
+    min-height: 7.25rem;
+    align-items: center;
+    text-align: start;
+    gap:1rem;
+    border-radius: 0.75rem;
+}
+.white-btn svg{
+min-width: 3rem;
+min-height: 3rem;
 }
 .form-content{
     width: fit-content;
