--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,9 @@ html,body {
     height: 100%;
     scroll-behavior: smooth; 
 }
+.gold-text{
+    color:var(--color-gold);
+}
 .header {
     width: 100%;
     display: inline-flex;
@@ -140,7 +143,95 @@ html,body {
     margin-top:1rem;
     padding:1rem;
     justify-content: space-between;
+    align-items: center;
 
+}
+
+        /* Модальное окно */
+        .free-consult-modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+        }
+
+        .free-consult-modal-content {
+            background: white;
+            padding: 20px;
+            margin: 10% auto;
+            width: 300px;
+            border-radius: 10px;
+            text-align: center;
+            position: relative;
+        }
+
+        /* Кнопка закрытия */
+        .free-consult-close {
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            font-size: 20px;
+            cursor: pointer;
+        }
+
+        /* Поля формы */
+        .free-consult-modal-content input, .free-consult-modal-content select {
+            width: 100%;
+            margin: 10px 0;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        /* Кнопка отправки */
+        .free-consult-submit {
+            background-color: #28a745;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            border-radius: 5px;
+        }
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 0.25rem;
+}
+
+.modal-content {
+    position: relative;
+    margin: 5% auto;
+    padding: 20px;
+    width: 90%;
+    max-width:1000px;
+    border-radius: 0.5rem;
+}
+
+.close {
+    position: absolute;
+    top: 20px;
+    right: 20px; 
+    font-size: 40px;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    transition: color 0.3s ease; 
+}
+
+.close:hover {
+    color: #ccc;
 }
 .footer-socials-block{
     display: flex;
@@ -212,6 +303,7 @@ gap:1.5rem;
 display: flex;  
 gap:2rem;
 padding:2.75rem;
+
 }
 .footer-interactive-item{
     display:flex;
@@ -220,7 +312,7 @@ align-items: center;
 padding: 1.25rem;
 
 width: 31.875rem;
-height: 9.75rem;
+min-height: 9.75rem;
 
 background: var(--color-gray);
 border-radius: 0.75rem;
@@ -386,6 +478,7 @@ justify-content: start;
 gap:5rem;
 flex-direction: row;
 justify-content: center;
+align-items: center;
 }
 .intro-adv-block{
     display: flex;
@@ -402,8 +495,20 @@ color:var(--color-gold);
     font-size:20px;
     color:white;
 }
-.intro-hint-block{
-
+.button-block{
+    gap:1rem !important;
+    padding-top:2rem;
+    padding-bottom:2rem;
+}
+.white-btn{
+    width: 90%;
+    max-width: 20rem !important;
+}
+.intro-hint-button-block{
+    display:flex;
+    flex-direction: column;
+align-items: center;
+gap:1rem !important;
 }
 .intro-hint-title{
 font-family: 'Geologica Regular';
@@ -878,7 +983,60 @@ border-radius: 1rem;
     font-family: 'Geologica SemiBold';
     font-size:13px;
 }
+.footer-socials-block-2{
+    display: none;
+}
+.carousel-indicators {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
 
+.indicator {
+    width: 10px;
+    height: 10px;
+    background-color: #ccc;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.indicator.active {
+    background-color: #333;
+}
+@media (max-width: 768px) {
+    .control{
+        display:none;
+    }
+    .carousel-item {
+        flex: 0 0 calc(100% - 1rem);
+        margin-right: 1rem;
+        opacity: 1;
+        transition: opacity 0.3s ease;
+    }
+
+    .carousel-item:not(:first-child) {
+        opacity: 0.5; /* Частичное отображение следующего элемента */
+    }
+
+    .carousel-item.active {
+        opacity: 1; /* Полное отображение активного элемента */
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    .control{
+        display:none;
+    }
+    .advantages-content{
+        grid-template-columns: repeat(2, 1fr) !important;
+        grid-template-rows: repeat(3, 1fr) !important;
+        padding: 1rem !important;
+    }
+    .carousel-item {
+        flex: 0 0 calc(50% - 1rem);
+    }
+}
 .control {
     width: 50px;
     height: 50px;
@@ -949,10 +1107,42 @@ border-radius: 1rem;
 @media (max-width: 900px) {
 .intro{
     flex-direction:column; 
-    padding: 1.5rem;
+    padding:0;
+}
+.control{
+    display:none;
+}
+.form-text{
+    display: flex;
+    flex-direction:column;
+    align-items: flex-start;
+    width: 100%;
+}
+.intro-hint-title{
+
+text-align: start;
+
+}
+.intro-adv-block{
+    gap:2rem !important;
+    padding: 2rem !important;
+}
+.form-item{
+    display: flex;
+    width: 20rem;
+}
+.steps-left-column,
+.steps-right-column{
+    padding-left:1rem;
+    padding-right:1rem;
+    padding-top:0;
+    padding-bottom:0;
 }
 .form-picture{
     display: flex;
+}
+.interactive-block{
+    padding: 1rem;
 }
 .intro .interactive-block{
     width: 100%;
@@ -960,15 +1150,48 @@ border-radius: 1rem;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-left:0;
+    margin:0;
     }
-    
+    .advantages-content,
+    .intro .button-block,
+    .intro-hint-button-block,
+    .intro-adv-block,
+    .steps-content,
+    .footer-interactive-block{
+        display:flex !important;
+        flex-direction: column;
+    }
+    .footer-interactive-item{
+width: 20rem;
+    }
+    .footer-interactive-block{
+        padding:0;
+    }
+    .advantages-content{
+        padding: 0 !important;
+    }
+    .steps-title{
+            inline-size: 20rem;
+            margin-top:3rem;
+            margin-bottom:3rem;
+    }
+    .steps-content{
+        padding: 0;
+        gap:0;
+    }
+    .steps{
+        padding: 0;
+    }
+    .red-btn-header{
+        display: none;
+    }
     .intro .interactive-block .intro-name-first{
     color:var(--color-white);
     text-align: start;
     width: 100%;
     font-family: "Geologica Bold",sans-serif;
     font-size:48px;
+    padding-top:2.5rem;
     }
     
     .intro .interactive-block .intro-name-second{
@@ -977,6 +1200,9 @@ border-radius: 1rem;
     width: 100%;
     font-family: "Geologica Bold",sans-serif;
     font-size:48px;
+    inline-size: 18rem;
+    display: inline-block;
+    margin-right:auto;
     }
     .intro .interactive-block .intro-title{
     color:var(--color-white);
@@ -1017,7 +1243,9 @@ border-radius: 1rem;
     color:var(--color-main-accent);
     text-decoration: none;
     }
-    
+    .steps-item{
+        min-width: 100%;
+    }
     .intro .picture-block svg{
         width: 20rem;
         height: auto;
@@ -1032,19 +1260,9 @@ border-radius: 1rem;
     .header-title{
         display:none;
     }
-    .form-item{
-        width: 100%;
-        display: inline-flex;
-        flex-direction: column;
-        box-sizing: border-box;
-        background: var(--color-white);
-        border-radius: 12px;
-        text-align: center;
-        border: 2px solid var(--color-white);
-        align-items: center;
-        padding:2rem;
-        justify-content: space-between;
-    
+
+    .form-content{
+        padding:0;
     }
     .footer-header{
         padding-left:0;
@@ -1064,36 +1282,79 @@ border-radius: 1rem;
         padding-bottom: 4rem;
     }
     .footer{
-        flex-direction: column-reverse;
+        flex-direction: column;
+        padding:0;
     }
     .footer-content{
     display:flex;
     flex-direction: column-reverse;
     border:0;
+    align-items: start;
+
     }
     .footer-prices{
         border:0;
+        flex-direction: column;
+        gap:0;
     }
     .footer-foot{
-        display:none;
-    }
-    .footer-header{
+        border-top:1px solid var(--color-light-gray);
+        width: 90%;
+        text-align: center;
         padding-top:2rem;
-        border-top: 1px solid white;
+        margin-bottom:3rem;
+    }
+    .footer-header {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
     }
     .form-content{
         width: 100%;
+        display: flex;
+        align-items: center;
+    }
+    .footer-name {
+        inline-size: 15rem;
     }
     .form-cost{
-        text-align:center;
         width: 100%;
     }
-    .form-item{
-        gap:2rem;
-    }
-    .form-text{
-        gap:1.5rem;
+
+    .advantages {
+        display: flex;
+        justify-content: center;
         align-items: center;
+        width: 100%;
+    }
+    .form-title{
+        text-align: center;
+    }
+    .form-subtitle{
+        text-align: center;
+        padding-bottom:2rem;
+        padding-top:1rem;
+    }
+    .footer-socials-block-2{
+        display:flex;
+        flex-direction: row;
+        padding-top: 1rem;
+        gap:0.5rem;
+    }
+    .footer-socials-block{
+        display:none;
+    }
+    .advantages-item{
+        display: flex;
+        width:19rem;
+        height: 19rem;
+        -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+        -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+        box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+        background-color: white;
+        border-radius: 0.5rem;
+        flex-direction: column;
+        padding: 1.5rem;
+        margin: 1.5rem 0 1.5rem 0;
     }
 
 }
