--- a/styles.css
+++ b/styles.css
@@ -121,15 +121,11 @@ html,body {
 .stages_list {
     display: flex;
     overflow-x: auto;
-    scroll-snap-type: x mandatory;
     white-space: nowrap;
-    padding-left: 1rem;
-    padding-top:1rem;
-    padding-bottom:1rem;
+    padding: 1rem;
     scrollbar-width: none;
     cursor: grab;
     user-select: none; /* Запрет на выделение текста внутри элемента */
-    scroll-behavior: smooth;
 }
 .stages_list::-webkit-scrollbar {
     display: none;
@@ -140,7 +136,6 @@ html,body {
     top: 5%;
     background: white;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     z-index: 10000;
     max-width: 90%;
     width: 600px;
@@ -150,6 +145,7 @@ html,body {
     transition: opacity 0.3s ease; 
     font-family: 'Geologica Regular';
     font-size:16px;
+    border-radius: 0.5rem;
 }
 
 .popup_block.active {
@@ -158,6 +154,7 @@ html,body {
 
 .inner_popup {
     padding: 20px;
+    text-align: start;
 }
 
 .fancybox-close-small {
@@ -181,12 +178,27 @@ html,body {
     background-color: var(--color-white);
     padding:1rem;
     border-radius: 0.25rem;
+    animation: pulse 2s infinite;
 }
 .law span{
     color:var(--color-gold);
 }
 .law-link{
 text-decoration:underline;
+}
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(255, 196, 0, 0.705);
+    }
+    70% {
+        transform: scale(1.02);
+        box-shadow: 0 0 0 10px rgba(255, 0, 0, 0);
+    }
+    100% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(255, 0, 0, 0);
+    }
 }
 
 ol {
@@ -228,7 +240,7 @@ ol .sub-list > li:before {
     position: absolute;
     top: 0;
     height: 100%;
-    width: 1rem; /* Ширина градиента */
+    width: 1.5rem; /* Ширина градиента */
     pointer-events: none; /* Игнорировать события мыши */
     transition: opacity 0.3s; /* Плавный переход для прозрачности */
     opacity: 0; /* Скрываем по умолчанию */
@@ -250,7 +262,7 @@ ol .sub-list > li:before {
     padding: 15px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    scroll-snap-align: start;
+    scroll-snap-align: center;
     display: flex;
     flex-direction: column;
     min-height: 20rem;
@@ -286,6 +298,18 @@ ol .sub-list > li:before {
     height: fit-content;
     color: var(--color-dark-gray);
     cursor: pointer;
+}
+.header-adress{
+    inline-size: 6rem;
+    text-align: start;
+    font-size:12px;
+    color:var(--color-white) !important;
+}
+.header-adress:hover{
+    color:var(--color-gold) !important;
+}
+.deal-cost{
+    color:var(--color-gold);
 }
 .side-sheet-header-title{
     display: none;
@@ -507,7 +531,8 @@ gap:1.5rem;
 .footer-interactive-block{
 display: flex;  
 gap:2rem;
-padding:2.75rem;
+padding-top:2.75rem;
+padding-bottom:2.75rem;
 
 }
 .footer-interactive-item{
@@ -521,6 +546,17 @@ min-height: 9.75rem;
 
 background: var(--color-gray);
 border-radius: 0.75rem;
+}
+@media (max-width: 1100px) and (min-width: 900px) {
+    .footer-interactive-item {
+        width: 80%; /* Ширина будет 80% от ширины родительского контейнера */
+    }
+    .steps-content{
+        display:flex !important;
+        flex-direction: column !important;
+        padding:0 !important;
+        gap:0 !important;
+    }
 }
 .footer-interactive-title{
     font-family: 'Geologica SemiBold';
@@ -1059,7 +1095,8 @@ select{
     flex-direction: row;
     justify-content: center;
     gap:2.5rem;
-    padding:3rem;
+    padding-top:3rem;
+    padding-bottom:3rem;
     font-size: 24px;
 }
 .steps-left-column,
@@ -1234,9 +1271,17 @@ cursor: pointer;
     background-color: #333;
 }
 @media (max-width: 768px) {
+    .stages_list {
+        touch-action: pan-x !important;
+        scroll-snap-type: x mandatory;
+        scroll-behavior: smooth;
+    }
     .popup_block {
         width: 90%;
         max-width: 90%;
+        height: 70%;
+        max-height: 70%;
+
     }
     .control{
         display:none;
@@ -1256,8 +1301,9 @@ cursor: pointer;
         opacity: 1; 
     }
     .advantages-item{
-        max-height: 12rem;
-        padding:0.5rem !important;
+        max-height: 13rem;
+        padding:1rem !important;
+        margin:1rem !important;
     }
     .advantages-title{
         padding-bottom:0.5rem !important;
